# proto-grpc-demo

./: .gitignore  CMakeLists.txt  README.md  index.md
doc/: 0-install-guide-en.md  0-install-guide.md  1-usage-guide.md
src/: CMakeLists.txt
src/client/: CMakeLists.txt  client_demo.cpp  demo.cpp  main.cpp  rpc_client.cpp  rpc_client.h  test.cpp
src/main/: main.cpp
src/proto/: route_guide.proto
src/server/: CMakeLists.txt  demo.cpp  main.cpp  mq_server.cpp  rpc_server.cpp  rpc_server.h  rpc_service.cpp  rpc_service.h  server_demo.cpp
src/service/: service.cpp
test/cross_compile/: Makefile  simple_ldd_1  simple_ldd_2
test/cross_compile/src/: hello_c.c  hello_cpp.cpp
tool/cmake/: use_absl.cmake  use_grpc.cmake  use_proto.cmake
tool/script/: abseil_install.sh  cares_install.sh  grpc_install.sh  proto_install.sh  re2_install.sh  zlib_install.sh
tools/cmake/: use_absl.cmake  use_grpc.cmake  use_hiksdk.cmake  use_proto.cmake  use_zmq.cmake
tools/python/: csv2img.py  data.csv
tools/script/: abseil_install  abseil_install.sh  arm-linux-gnueabi-ldd  cares_install  cares_install.sh  cmake_install  cross-compile-ldd  grpc_install  grpc_install.sh  proto_install  proto_install.sh  re2_install  re2_install.sh  tree_install  zlib_install  zlib_install.sh
tools/script/DEBIAN/: postinst  postrm  preinst  prerm
tools/script/LDD/: arm-linux-gnueabi-ldd
